--- a/SiteB/index.html
+++ b/SiteB/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Departmental Page</title>
+      <link href="../SiteB/css/siteB.css" rel="stylesheet" />
   </head>
   <body id="landing">
     <h1>Departments of Centre College</h1>
